# pytest-phmdoctest

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  checklist.txt  conf.py  conftest.py  index.rst  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  install.yml
doc/: recent_changes.md  requirements.txt
src/pytest_phmdoctest/: collectors.py  docmod.py  plugin.py  settings.py
tests/: check_classifiers.py  conftest.py  old_pytests.py  requirements_inspect.txt  test_collect_parser.py  test_collect_section.py  test_configs.py  test_docmod.py  test_generate.py  test_plugin.py  test_readme.py  test_save.py
tests/markdown/: one_python_and_one_skipped_session.md  one_python_block.md  one_session_block.md  one_skipped_session.md  setup_doctest.md
tests/sample/: README.md  pytest.ini
tests/sample/doc/: README.md  nocode.md  project.md
tests/sample/src/: do_not_import_me.py
tests/sample/tests/: test_example.py
tests/setup_doctest_demo/: test_setup_doctest1.py  test_setup_doctest2.py
