[metadata]
# This includes the license file(s) in the wheel.

# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license = MIT
license_files = LICENSE.txt

# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = pytest-phmdoctest
version = 1.0.0
author = Mark Taylor
author_email = mark66547ta2@gmail.com
description = pytest plugin to test Python examples in Markdown using phmdoctest.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url= https://tmarktaylor.github.io/pytest-phmdoctest
project_urls =
    Bug Reports = https://github.com/tmarktaylor/pytest-phmdoctest/issues
    Source = https://github.com/tmarktaylor/pytest-phmdoctest/
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Documentation
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
keywords =
    documentation
    doctest
    markdown
    testing

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    packaging
    py
    pytest >= 5.4.3
    phmdoctest >= 1.4.0
    commonmark >= 0.9.1

[options.packages.find]
where = src

; todo- do other plugins do this?
; [options.package_data]
; phmdoctest = py.typed

[options.extras_require]
test =
    coverage
    pytest >= 6.2
    PyYAML >= 5.4.1
inspect =
    black
    flake8
    pep8-naming
    check-manifest
    twine
docs =
    myst-parser >= 0.15.1
    sphinx >= 4.1.0
    sphinx-rtd-theme >= 1.0.0
    docutils < 0.17

# see setup.py
#[options.entry_points]
#pytest11 =
#    phmdoctest = pytest_phmdoctest

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

# Configurations for external tools.

[flake8]
exclude = doc, tests, fixture.py
max-line-length = 88
extend-ignore = E203

[coverage:run]
branch = True
source = src
